[package]
name = "rocket-multipart-form-data"
version = "0.10.0"
edition = "2018"
authors = ["Magic Len <len@magiclen.org>"]
repository = "https://github.com/magiclen/rocket-multipart-form-data"
homepage = "https://magiclen.org/rocket-multipart-form-data"
keywords = ["rocket", "server", "web", "multipart", "form-data"]
categories = ["parser-implementations"]
description = "This crate provides a multipart parser for the Rocket framework."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = "0.5.0-rc.1"
mime = "0.3.12"
multer = "2"
tokio-util = "0.6.6"

[dev-dependencies]
rocket-include-static-resources = "0.10"
rocket-raw-response = "0.5"