[package]
name = "rocket-multipart-form-data"
version = "0.10.7"
edition = "2021"
rust-version = "1.69"
authors = ["Magic Len <len@magiclen.org>"]
repository = "https://github.com/magiclen/rocket-multipart-form-data"
homepage = "https://magiclen.org/rocket-multipart-form-data"
keywords = ["rocket", "server", "web", "multipart", "form-data"]
categories = ["parser-implementations"]
description = "This crate provides a multipart parser for the Rocket framework."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = "0.5.0-rc.4"
mime = "0.3.12"
multer = "2"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
rocket-include-static-resources = "0.10"
rocket-raw-response = "0.5"
